k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-service
  namespace: prod
  labels:
    app: counter-service
spec:
  type: ClusterIP
  selector:
    app: counter-service
  ports:
    - port: 8080
      targetPort: 5000
      protocol: TCP
      name: http
  # Sticky sessions (Disabled to observe load distribution across all pods)
  # sessionAffinity: ClientIP
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
